# gitlab-slack-bot

./: Cargo.toml
src/: gitlab.rs  lib.rs  main.rs  state.rs
