[package]
name = "gitlab-slack-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
axum = { version = "0.6.4", features = ["macros"] }
serde_json = "1.0"
lambda_http = "0.8.1"
lambda_runtime = "0.8.2"
hyper = "0.14.27"
hmac = "0.12.1"
sha2 = "0.10.8"
tower = "0.4.13"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"], default-features = false }

